# MacPCANViewer

./: .gitignore  CMakeLists.txt  README.md
MacPCAN-View/: AppDelegate.swift  Info.plist  MessagesViewController.swift
MacPCAN-View.xcodeproj/: project.pbxproj
MacPCAN-View.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MacPCAN-View.xcodeproj/project.xcworkspace/xcuserdata/clovel.xcuserdatad/: UserInterfaceState.xcuserstate
MacPCAN-View.xcodeproj/xcuserdata/clovel.xcuserdatad/xcschemes/: xcschememanagement.plist
MacPCAN-View/Base.lproj/: Main.storyboard
MacPCAN-View/ViewControllers/: ConnectViewController.swift  MessagesViewController.swift
MacPCAN-View/inc/: MacPCAN-View-Bridging-Header.h
MacPCAN-View/src/: CANDriver.cpp  CANDriver.hpp  CANDriver.swift  CANDriverManager.swift  CANMessage.cpp  CANMessage.swift  CANMessageReader.cpp  CANMessageSender.cpp  CANReader.swift  CANSender.swift  Fifo.swift  MacPCAN-View-Bridging-Header.h
MacPCANViewer/: AppDelegate.swift  Info.plist
MacPCANViewer.xcodeproj/: project.pbxproj
MacPCANViewer/Base.lproj/: Main.storyboard
MacPCANViewer/ViewControllers/: ConnectViewController.swift  MessagesViewController.swift  NewMessageViewController.swift
MacPCANViewer/src/: CANDriver.swift  CANReader.swift  CANSender.swift  Fifo.swift
inc/: CANDriver.hpp  CANMessage.hpp
src/: CANMessage.hpp  CANMessageReader.hpp
tests/: CMakeLists.txt
unused/src/: CANDriver.cpp  CANMessageSender.hpp  CMakeLists.txt
